<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Asclepius</string>
    <string name="tagline">skin cancer detection app.</string>
    <string name="add_image_label">*Please select the image you want to analyze.</string>
    <string name="select_image">Select</string>
    <string name="analysis_now">Analysis Now</string>
    <string name="news">News about cancer</string>
    <string name="history">History</string>
    <string name="analysis_result">Analysis result</string>
    <string name="classified_as">classified as</string>
    <string name="result_sample">Non Cancer</string>
    <string name="high_score_label_sample">Non Cancer</string>
    <string name="low_score_label_sample">Cancer</string>
    <string name="score_percentage">%d\%%</string>
    <string name="warning_no_photo_added">There is no photo that can be classified, please add it first.</string>
    <string name="name_file">image_%s_%d.jpg</string>
    <string name="photo_added">Photo added successfully</string>
    <string name="analysis_history_result">%s %d\%%</string>
    <string name="date_sample">2024/01/25</string>
    <string name="empty_data">The history of analysis results will appear here.</string>
    <string name="detail_history">Detail history</string>
    <string name="author_sample">Malak Saleh</string>
    <string name="title_sample">MIT experts develop AI models that can detect pancreatic cancer early</string>
    <string name="desc_sample">Researchers at MIT’s CSAIL division\r\n, which focuses on computer engineering and AI development\r\n, built two machine learning algorithms that can detect pancreatic cancer at a higher threshold than current diagnostic standards. The two models together formed …</string>
    <string name="url" tools:ignore="TypographyDashes">https://consent.yahoo.com/v2/collectConsent?sessionId=1_cc–session_28efae2f-85c3-4715-a2bd-c5a1d35244e5</string>
    <string name="publishedAt" tools:ignore="TypographyDashes">2024-01-12T22:25:05Z</string>
    <string name="detail_news">Detail news</string>
    <string name="source">Source: %s</string>
    <string name="no_media">No media selected</string>
    <string name="failed_to_load">Failed to load news.</string>
    <string name="connection_problem">Problematic internet connection.</string>

    <!-- contentDescription -->
    <string name="ic_logo">Logo icon image</string>
    <string name="news_navigation">News navigation image</string>
    <string name="history_navigation">History navigation image</string>
    <string name="placeholder_image">Placeholder image</string>
    <string name="ic_detection">Detection icon image</string>
    <string name="ic_arrow_back">Arrow back icon image</string>
    <string name="ic_history">History icon image</string>
    <string name="ic_calender">Calender icon image</string>
    <string name="ic_news">News icon image</string>
    <string name="ic_author">Author icon image</string>
    <string name="ic_source">Source icon image</string>
    <string name="ic_delete">Delete icon image</string>
    <string name="result_image">Result image</string>
    <string name="news_image">News image</string>
    <string name="logo_image">Logo image</string>
</resources>