<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/rounded_bottom_style"
                android:backgroundTint="@color/md_theme_primary"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa_bold"
                        android:text="@string/app_name"
                        android:textColor="@color/md_theme_onPrimary"
                        android:textSize="20sp"
                        tools:ignore="TextSizeCheck" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/btnNews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cycle_button_style"
                        android:contentDescription="@string/news_navigation"
                        android:padding="8dp"
                        android:src="@drawable/ic_news"
                        app:tint="@color/md_theme_primary"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    <ImageButton
                        android:id="@+id/btnHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/cycle_button_style"
                        android:contentDescription="@string/history_navigation"
                        android:padding="8dp"
                        android:src="@drawable/ic_history"
                        app:tint="@color/md_theme_primary"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="end"
                android:layout_marginTop="-300dp"
                android:contentDescription="@string/ic_logo"
                android:src="@drawable/ic_logo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/linearLayout3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-200dp"
                app:cardCornerRadius="20dp"
                tools:ignore="TextSizeCheck">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="26dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_light"
                        android:text="@string/add_image_label"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/previewImageView"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/placeholder_image"
                        android:src="@drawable/iv_placeholder"
                        tools:ignore="ImageContrastCheck" />

                    <Button
                        android:id="@+id/galleryButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/select_image" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/analyzeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:enabled="false"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/analysis_now" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/md_theme_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>