<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.history.HistoryActivity">

    <ScrollView
        android:id="@+id/clContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/rounded_bottom_style"
                android:backgroundTint="@color/md_theme_primary"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <ImageView
                        android:id="@+id/btnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cycle_button_style"
                        android:contentDescription="@string/ic_arrow_back"
                        android:padding="6dp"
                        android:src="@drawable/ic_arrow_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/history"
                        android:textColor="@color/md_theme_onPrimary"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="end"
                android:layout_marginTop="-120dp"
                android:contentDescription="@string/ic_history"
                android:src="@drawable/ic_history" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-300dp"
                android:layout_marginBottom="20dp"
                android:overScrollMode="never"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:scrollbarSize="0dp"
                tools:listitem="@layout/item_history"
                tools:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvEmptyData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_onPrimary"
        android:fontFamily="@font/quicksand_regular"
        android:padding="8dp"
        android:text="@string/empty_data"
        android:textAlignment="center"
        android:textColor="@color/md_theme_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/clContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>